--- a/src/Screens/MessageChat/messageChat.css
+++ b/src/Screens/MessageChat/messageChat.css
@@ -51,8 +51,8 @@
 }
 
 .contacts-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    display: flex;
+    flex-direction: column;
     gap: 1rem;
 }
 
