--- a/src/Screens/MessageChat/messageChat.css
+++ b/src/Screens/MessageChat/messageChat.css
@@ -32,8 +32,7 @@
     background-color: #075E54;
 }
 
-.contacts-container input[type="text"],
-.contacts-container input[type="email"] {
+.contacts-container input {
     width: 100%;
     padding: 0.75rem;
     border: 1px solid #ddd;
