--- a/src/Screens/MessageChat/messageChat.css
+++ b/src/Screens/MessageChat/messageChat.css
@@ -1,4 +1,4 @@
-/* 
+
 .contacts-container {
     min-height: 100vh;
     background-color: #f5f5f5;
@@ -124,4 +124,4 @@
         border-color: #444;
         color: #e0e0e0;
     }
-} */
+}
